# star-image-enhancements

./: .gitmodules  CMakeLists.txt  Makefile  README.md
src/: common.h  debug.h  main.cpp  starlist.cpp  starlist.h  starmatch.h  startransform.cpp  startransform.h
